# badX12

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  doc.txt  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md  stale.yml
badX12/: __init__.py  __project__.py  settings.py
badX12/common/: __init__.py  element.py  envelope.py  errors.py  interchange.py  segment.py
badX12/documents/: __init__.py  base.py
badX12/parsers/: __init__.py  _group.py  _transaction_set.py  base.py
badx12/: __init__.py  __main__.py  _settings.py  document.py  exceptions.py  parser.py
badx12/commands/: __init__.py
badx12/commands/parse/: __init__.py  utils.py
badx12/common/: click.py  helpers.py  paths.py
badx12/document/: __init__.py  element.py  envelope.py  factory.py  group.py  interchange.py  segment.py  settings.py  transaction_set.py  validators.py
badx12/document/datastructures/: __init__.py  element.py  envelope.py  segment.py
badx12/document/revisions/M271_00510X279A1/: loops.py  segments.py  transaction_set.py
badx12/parsers/: M271_005010X279A1.py  __init__.py  base.py
badx12/utils/: __init__.py  element.py  envelope.py  errors.py  group.py  interchange.py  segment.py  transaction_set.py
docs/: Makefile  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  make.bat  usage.rst
docs/tutorial/: intro.md
scripts/: lint.sh  test.sh
tests/: test_badx12.py  utils.py
tests/files/edi/: X279-generic-request-by-clinic-for-patient-(subscriber)-eligibility.edi
tests/files/errors/: bad_file.edi  error_validation.edi  segment_terminator.edi  unknown_segment_error.edi
