[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "badX12"
author = "Alberto J. Marin"
author-email = "alberto@ajmar.in"
home-page = "https://github.com/albmarin/badX12"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires = []
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://badx12.readthedocs.io/en/latest/"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==4.6.1",
    "pytest-runner==5.1",
    "pytest-cov==2.7.1",
    "codecov==2.0.15",
    "mypy",
    "black",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "markdown-include",
]
dev = [
    "tox==3.12.1",
    "pycalver",
    "flake8==3.7.7",
    "black",
    "twine==1.13.0",
    "wheel==0.33.4",
    "pre-commit==1.16.1",
]
all = [
    "click==7.0",
    "dicttoxml==1.7.4",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.venv36
  | _build
  | buck-out
  | build
  | dist
)/
'''
