[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "badx12"
author = "Alberto J. Marin"
author-email = "alberto@ajmar.in"
home-page = "https://github.com/albmarin/badX12"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires = [
    "click==7.0",
    "dicttoxml==1.7.4",
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://badx12.readthedocs.io/en/latest/"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==6.0.1",
    "pytest-runner==5.2",
    "pytest-cov==2.10.0",
    "codecov==2.1.8",
    "flake8==3.8.3",
    "isort==5.4.1",
    "mypy",
    "black",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "markdown-include",
]
dev = [
    "pycalver",
    "black",
    "twine==3.2.0",
    "wheel==0.35.0",
    "packaging>=20.2",
    "pre-commit==2.6.0",
]
all = []

[tool.flit.scripts]
badx12 = "badx12.__main__:cli"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.venv36
  | _build
  | buck-out
  | build
  | dist
)/
'''
